--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
 						<li><a class="waves-effect" href="#">Entertainers</a></li>
 						<li><a class="waves-effect" href="#">Vendors</a></li>
 						<li><a class="waves-effect" href="#">Etertainment Schedule</a></li>
-						<li><a class="waves-effect" href="#" ">About Us</a></li>
-						<li><a class="waves-effect" href="#" ">Contact Us</a></li>
+						<li><a class="waves-effect" href="#">About Us</a></li>
+						<li><a class="waves-effect" href="#">Contact Us</a></li>
 					</ul>
 					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown2'>Tickets</a></li>
 					<ul id='dropdown2' class='dropdown-content black lighten-5'>
@@ -84,7 +84,7 @@
 						<li><a class="waves-effect" href="#">General Admission</a></li>
 						<li><a class="waves-effect" href="#">Queen's Joust & Feast</a></li>
 						<li><a class="waves-effect" href="#">Family Pass</a></li>
-						<li><a class="waves-effect" ui-sref="products.portable-rotisseries">Education Excursions</a></li>
+						<li><a class="waves-effect" href="#">Education Excursions</a></li>
 					</ul>
 					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown3'>Forms</a></li>
 					<ul id='dropdown3' class='dropdown-content black lighten-5'>
@@ -94,11 +94,11 @@
 						<li><a class="waves-effect" href="#">Artisans</a></li>
 						<li><a class="waves-effect" href="#">Volunteers</a></li>
 					</ul>
-					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown4'>F.A.Q.</a></li>
+					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown4'>FAQ</a></li>
 					<ul id='dropdown4' class='dropdown-content black lighten-5'>
 						<li><a class="waves-effect" href="#">General FAQ</a></li>
-						<li><a class="waves-effect" href="#">Map</a></li>
-						<li><a class="waves-effect" href="#" ">Contact Us</a></li>
+						<li><a class="waves-effect" href="#">Map / Directions</a></li>
+						<li><a class="waves-effect" href="#">Contact Us</a></li>
 					</ul>
 				</ul>
 				<a data-activates="slide-out" class="right button-collapse"><i class="material-icons amber-text text-accent-2">menu</i></a>
@@ -106,27 +106,83 @@
 		</nav>
 	</div>
 	<!-- Mobile Nav -->
-	<ul id="slide-out" class="side-nav black goudyl">
-		<li><a class="amber-text text-accent-2" href="#">Home</a></li>
-		<li><a class="amber-text text-accent-2" href="#">About Us</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Insulated BBQs</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Delivery Info</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Comments</a></li>
-		<li><a class="amber-text text-accent-2" href="#" ">Contact Us</a></li>
-		<li><div class="divider"></div></li>
-		<li><a class="subheader amber-text text-accent-2">Trailer Products</a></li>
-		<li><div class="divider"></div></li>
-		<li><a class="amber-text text-accent-2" href="#">Smokers</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Insulated</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Grills</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Rotisseries</a></li>
-		<li><div class="divider"></div></li>
-		<li><a class="amber-text text-accent-2 subheader">Backyard Products</li>
-		<li><div class="divider"></div></li>
-		<li><a class="amber-text text-accent-2" href="#">Smokers</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Pits</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Grills</a></li>
-		<li><a class="amber-text text-accent-2" href="#">Open Fire Pits</a></li>
+	<ul id="slide-out" class="side-nav black goudyl amber-text text-accent-2">
+		<li><a href="/" class="goudym amber-text text-accent-2">#UtahRenFaire</a></li>
+		<li><a href="/" class="amber-text text-accent-2">Home</a></li>
+		<li>
+			<ul class="collapsible" data-collapsible="accordion">
+				<li>
+					<a class="collapsible-header amber-text text-accent-2">
+						<i class="material-icons amber-text text-accent-2">arrow_drop_down</i>Information
+					</a>
+					<div class="collapsible-body black">
+						<ul>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Map</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Featured Guests</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Entertainers</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Vendors</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Etertainment Schedule</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">About Us</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Contact Us</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul class="collapsible" data-collapsible="accordion">
+				<li>
+					<a class="collapsible-header amber-text text-accent-2">
+						<i class="material-icons amber-text text-accent-2">arrow_drop_down</i>Tickets
+					</a>
+					<div class="collapsible-body black">
+						<ul>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Ticket Info</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Discounts</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">General Admission</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Queen's Joust & Feast</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Family Pass</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Education Excursions</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul class="collapsible" data-collapsible="accordion">
+				<li>
+					<a class="collapsible-header amber-text text-accent-2">
+						<i class="material-icons amber-text text-accent-2">arrow_drop_down</i>Forms
+					</a>
+					<div class="collapsible-body black">
+						<ul>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Vendors</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Guilds</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Entertainers</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Artisans</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Volunteers</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul class="collapsible" data-collapsible="accordion">
+				<li>
+					<a class="collapsible-header amber-text text-accent-2">
+						<i class="material-icons amber-text text-accent-2">arrow_drop_down</i>FAQ
+					</a>
+					<div class="collapsible-body black">
+						<ul>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">General FAQ</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Map / Directions</a></li>
+							<li><a href="#" class="amber-text text-accent-2 waves-effect">Contact Us</a></li>
+
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</li>
 	</ul>
 
 	<div id="contact-bar" class="center-align goudyl black">
@@ -150,6 +206,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- Slider -->
 	
 
 
@@ -165,13 +222,9 @@
 	<script>
 		$(document).ready(function(){
 
-			// $(window).resize(function() {
-			//   if ($(window).width() > 768) {
-			//     $('.nav-wrapper').addClass('container');
-			//   } else {
-			//     $('.nav-wrapper').removeClass('container');
-			//   }
-			// });
+			$('.carousel.carousel-slider').carousel({
+				fullWidth: true
+			});
 
 			$(".button-collapse").sideNav({
 				menuWidth: 200, // Default is 240
@@ -189,6 +242,7 @@
 				belowOrigin: true, // Displays dropdown below the button
 				alignment: 'left' // Displays dropdown with edge aligned to the left of button
 			});
+
 		});
 	</script>
 </body>
