--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,6 @@
 							<li><a href="#" class="amber-text text-accent-2 waves-effect">General FAQ</a></li>
 							<li><a href="#" class="amber-text text-accent-2 waves-effect">Map / Directions</a></li>
 							<li><a href="#" class="amber-text text-accent-2 waves-effect">Contact Us</a></li>
-
 						</ul>
 					</div>
 				</li>
@@ -206,10 +205,29 @@
 			</div>
 		</div>
 	</div>
-	<!-- Slider -->
+	<!-- Carousel -->
+	<!-- <div class="carousel carousel-slider">
+		<a class="carousel-item" href="#two!"><img src="img/robbie.jpg"></a>
+		<a class="carousel-item" href="#three!"><img src="http://i.imgur.com/kr5NYdO.jpg"></a>
+		<a class="carousel-item" href="#three!"><img src="img/feast2.jpg"></a>
+		<a class="carousel-item" href="#three!"><img src="img/collage-only-crop2.png"></a>
+		<a class="carousel-item" href="#three!"><img src="acl-action.jpg"></a>
+	</div> -->
+	<div class="slider">
+		<ul class="slides">
+			<li><img src="img/collage-only.png"></li>
+			<li><img src="http://i.imgur.com/kr5NYdO.jpg"></li>
+			<li><img src="img/robbie.jpg"></li>
+			<li><img src="img/feast2.jpg"></li>
+			<li><img src="img/acl-action.jpg"></li>
+			<li><img src="img/stary-olsa.jpg"></li>
+		</ul>
+	</div>
+
+	<div class="container">
+		<h4 class="goudym center-align">Proudly Sponsored by:</h4>
+	</div>
 	
-
-
 
 
 	<img class="responsive-img" src="http://i.imgur.com/91dORjU.jpg" crossorigin="anonymous">
@@ -222,8 +240,9 @@
 	<script>
 		$(document).ready(function(){
 
-			$('.carousel.carousel-slider').carousel({
-				fullWidth: true
+			$('.slider').slider({
+				interval: 4000,
+				height: 500
 			});
 
 			$(".button-collapse").sideNav({
