Add logo to nav. Bring in images. Slider settings.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,8 @@
 	<div class="navbar-fixed">
 		<nav class="black lighten-5">
 			<div class="nav-wrapper container">
-				<a href="/" class="brand-logo left flow-text goudym amber-text text-accent-2">Utah Renaissance Faire</a>
+				<!-- <a href="/" class="brand-logo left flow-text goudym amber-text text-accent-2">Utah Renaissance Faire</a> -->
+				<a href="/" class="brand-logo left"><img src="img/urf-logo.png"></a>
 				<!-- Desktop Nav -->
 				<ul class="right hide-on-med-and-down goudyl">
 					<li><a href="/" class="amber-text text-accent-2">Home</a></li>
@@ -208,7 +209,7 @@
 	<div class="slider">
 		<ul class="slides">
 			<li><img src="img/collage-only.png"></li>
-			<li><img src="http://i.imgur.com/kr5NYdO.jpg"></li>
+			<li><img src="img/joust.jpg"></li>
 			<li><img src="img/robbie.jpg"></li>
 			<li><img src="img/feast2.jpg"></li>
 			<li><img src="img/acl-action.jpg"></li>
@@ -218,7 +219,7 @@
 	<section class="container">
 		
 	</section>
-	
+
 	<section id="sponsors" class="container">
 		<h4 class="goudym center-align">Proudly Sponsored by:</h4>
 		<p class="center-align" href="http://www.mountainpointmedicalcenter.com/" target="_blank">
@@ -228,10 +229,13 @@
 			<img src="http://sorensonlegacyfoundation.org/public/images/logo_banner.gif" class="img-responsive" alt="Sorenson Legacy Foundation">
 		</p>
 		<p class="center-align" href="http://www.uvu.edu/" target="_blank">
-			<img src="img/UVU_logo.png" class="img-responsive" alt="UVU">
+			<img src="img/UVU_logo.png" class="img-responsive" alt="UVU School of the Arts">
 		</p>
 		<p class="center-align" href="https://www.alphagraphics.com/" target="_blank">
-			<img src="https://www.alphagraphics.com/content/dam/ag-www/global/logo/AG-logo-01.png" class="img-responsive" alt="alphagraphics">
+			<img src="https://www.alphagraphics.com/content/dam/ag-www/global/logo/AG-logo-01.png" class="img-responsive" alt=" Alphagraphics">
+		</p>
+		<p class="center-align" href="/" target="_blank">
+			<img src="img/UtahFineArts_logo.jpg" class="img-responsive" alt="Utah Valley Fine Arts">
 		</p>
 	</section>
 	
@@ -243,7 +247,7 @@
 		$(document).ready(function(){
 
 			$('.slider').slider({
-				interval: 4000,
+				interval: 400000000,
 				height: 500
 			});
 
