--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
 		$(document).ready(function(){
 
 			$('.slider').slider({
-				interval: 400000000,
+				interval: 4000,
 				height: 500
 			});
 
