Image fixes for slider

--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
 
 	<div class="slider">
 		<ul class="slides">
-			<li><img src="img/collage-only.png"></li>
+			<li><img src="img/collage-only.jpg"></li>
 			<li><img src="img/joust.jpg"></li>
 			<li><img src="img/robbie.jpg"></li>
 			<li><img src="img/feast2.jpg"></li>
