--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,10 @@
 				<!-- Desktop Nav -->
 				<ul class="right hide-on-med-and-down goudyl">
 					<li><a href="/" class="amber-text text-accent-2">Home</a></li>
+					<li><a href="/" class="amber-text text-accent-2">Map / Directions</a></li>
 					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown1'>Information</a></li>
 					<ul id='dropdown1' class='dropdown-content black lighten-5'>
-						<li><a class="waves-effect" href="#">Map</a></li>
+						<li><a class="waves-effect" href="#">Map / Directions</a></li>
 						<li><a class="waves-effect" href="#">Featured Guests</a></li>
 						<li><a class="waves-effect" href="#">Entertainers</a></li>
 						<li><a class="waves-effect" href="#">Vendors</a></li>
