--- a/public/index.html
+++ b/public/index.html
@@ -206,17 +206,21 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="slider">
-		<ul class="slides">
-			<li><img src="img/collage-only.jpg"></li>
-			<li><img src="img/joust.jpg"></li>
-			<li><img src="img/robbie.jpg"></li>
-			<li><img src="img/feast2.jpg"></li>
-			<li><img src="img/acl-action.jpg"></li>
-			<li><img src="img/stary-olsa.jpg"></li>
-		</ul>
-	</div>
+	<section id="slider-parent">
+		<div class="slider">
+			<ul class="slides">
+				<li><img src="img/collage-only.jpg"></li>
+				<li><img src="img/joust.jpg"></li>
+				<li><img src="img/acl-action.jpg"></li>
+				<li><img src="img/stary-olsa.jpg"></li>
+				<li><img src="img/unicorn-kid.jpg"></li>
+				<li><img src="img/bird2.jpg"></li>
+				<li><img src="img/bottles.jpg"></li>
+				<li><img src="img/moki1-1.jpg"></li>
+				<li><img src="img/robbie.jpg"></li>
+			</ul>
+		</div>
+	</section>
 	<section class="container">
 		
 	</section>
@@ -225,9 +229,6 @@
 		<h4 class="goudym center-align">Proudly Sponsored by:</h4>
 		<p class="center-align" href="http://www.mountainpointmedicalcenter.com/" target="_blank">
 			<img src="http://i.imgur.com/N5iDBuK.jpg" class="img-responsive" alt="IASIS Healthcare Mountain Point Medical Center">
-		</p>
-		<p class="center-align" href="http://sorensonlegacyfoundation.org/" target="_blank">
-			<img src="http://sorensonlegacyfoundation.org/public/images/logo_banner.gif" class="img-responsive" alt="Sorenson Legacy Foundation">
 		</p>
 		<p class="center-align" href="http://www.uvu.edu/" target="_blank">
 			<img src="img/UVU_logo.png" class="img-responsive" alt="UVU School of the Arts">
@@ -248,17 +249,26 @@
 		$(document).ready(function(){
 
 			$('.slider').slider({
-				interval: 4000,
+				interval: 3000,
+				transition: 700,
 				height: 500
 			});
 
+			// works on load
+			if ($(window).width() > 1440) {
+				$('.slider').addClass('container');
+			} else {
+				$('.slider').removeClass('container');
+			}
+
+			// works after load
 			$(window).resize(function() {
-        if ($(window).width() > 1440) {
-          $('.slider').addClass('container');
-        } else {
-          $('.slider').removeClass('container');
-        }
-      });
+				if ($(window).width() > 1440) {
+					$('.slider').addClass('container');
+				} else {
+					$('.slider').removeClass('container');
+				}
+			});
 
 			$(".button-collapse").sideNav({
 				menuWidth: 200, // Default is 240
