Add items to nav

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
 				<!-- Desktop Nav -->
 				<ul class="right hide-on-med-and-down goudyl">
 					<li><a href="/" class="amber-text text-accent-2">Home</a></li>
-					<li><a href="/" class="amber-text text-accent-2">Map / Directions</a></li>
+					<li><a href="/" class="amber-text text-accent-2">Directions</a></li>
+					<li><a href="/" class="amber-text text-accent-2">Schedule</a></li>
 					<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown1'>Information</a></li>
 					<ul id='dropdown1' class='dropdown-content black lighten-5'>
 						<li><a class="waves-effect" href="#">Map / Directions</a></li>
