--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,17 @@
 	</section>
 	
 
-
+	<!-- Angular CDNs -->
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular.min.js" 
+		integrity="sha256-Nfc6cMygZ4KL6eCnEri0iQjhvESQY3xivXAVj5XNbic=" 
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"
+		integrity="sha256-FMocp8pp1WruAK6GtjNDtuGAALCt/dCsVtw7oSjvPX0="
+		crossorigin="anonymous"></script>
+	<!-- Angular App -->
+	<script src='js/app.js'></script>
 
 	<!-- Frontend Scripts -->
 	<script>
