Get icons fixed. MaterializeCSS has no social icons.

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 	<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911'>
 	<!-- Icons -->
 	<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<!-- Compiled and minified CSS -->
 	<link rel='stylesheet' type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 	<!-- Custom Styles -->
