--- a/public/index.html
+++ b/public/index.html
@@ -209,40 +209,8 @@
 			</div>
 		</div>
 	</div>
-	<section id="slider-parent">
-		<div class="slider">
-			<ul class="slides">
-				<li><img src="img/collage-only.jpg"></li>
-				<li><img src="img/joust.jpg"></li>
-				<li><img src="img/acl-action.jpg"></li>
-				<li><img src="img/stary-olsa.jpg"></li>
-				<li><img src="img/unicorn-kid.jpg"></li>
-				<li><img src="img/bird2.jpg"></li>
-				<li><img src="img/bottles.jpg"></li>
-				<li><img src="img/moki1-1.jpg"></li>
-				<li><img src="img/robbie.jpg"></li>
-			</ul>
-		</div>
-	</section>
-	<section class="container">
-		
-	</section>
-
-	<section id="sponsors" class="container">
-		<h4 class="goudym center-align">Proudly Sponsored by:</h4>
-		<p class="center-align" href="http://www.mountainpointmedicalcenter.com/" target="_blank">
-			<img src="http://i.imgur.com/N5iDBuK.jpg" class="img-responsive" alt="IASIS Healthcare Mountain Point Medical Center">
-		</p>
-		<p class="center-align" href="http://www.uvu.edu/" target="_blank">
-			<img src="img/UVU_logo.png" class="img-responsive" alt="UVU School of the Arts">
-		</p>
-		<p class="center-align" href="https://www.alphagraphics.com/" target="_blank">
-			<img src="https://www.alphagraphics.com/content/dam/ag-www/global/logo/AG-logo-01.png" class="img-responsive" alt=" Alphagraphics">
-		</p>
-		<p class="center-align" href="/" target="_blank">
-			<img src="img/UtahFineArts_logo.jpg" class="img-responsive" alt="Utah Valley Fine Arts">
-		</p>
-	</section>
+	<ui-view></ui-view>
+	
 	
 
 	<!-- Angular CDNs -->
@@ -256,6 +224,8 @@
 		crossorigin="anonymous"></script>
 	<!-- Angular App -->
 	<script src='js/app.js'></script>
+	<!-- Controllers -->
+	<script src='js/mainCtrl.js'></script>
 
 	<!-- Frontend Scripts -->
 	<script>
